--- a/template/login.html
+++ b/template/login.html
@@ -9,12 +9,12 @@
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static-files/css/normalize.css">
         <link rel="stylesheet" href="static-files/css/master.css">
-        <link rel="stylesheet" href="static-files/css/index.css">
+        <link rel="stylesheet" href="static-files/css/login.css">
     </head>
     <body>
         <div class="cover">
             <div class="tint">
-                
+
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
