--- a/template/login.html
+++ b/template/login.html
@@ -8,13 +8,20 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static-files/css/normalize.css">
-        <link rel="stylesheet" href="static-files/css/master.css">
         <link rel="stylesheet" href="static-files/css/login.css">
     </head>
     <body>
         <div class="cover">
             <div class="tint">
-
+                <div class="form-container">
+                    <form class="form-group" method="POST">
+                        <label for="email">Email Address</label>
+                        <input class="form-control" type="email" name="email" id="email" placeholder="Email address" aria-describedby="label">
+                        <label for="password">Password</label>
+                        <input class="form-control" type="password" name="password" id="password" placeholder="Password" aria-describedby="label">
+                        <button type="button" name="button"></button>
+                    </form>
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
