--- a/template/static-files/css/master.css
+++ b/template/static-files/css/master.css
@@ -1,15 +1,6 @@
 body, html {
     min-height: 90vh;
 }
-.cover {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.tint {
-    background-color: rgba(0,10,80,.4);
-    height: 100%;
-}
 .navbar-nav a {
     color: white !important;
     font-size: 1.2rem;
@@ -28,4 +19,30 @@ body, html {
 }
 .fa:hover {
     transform: scale(1.2);
+}
+input {
+    height: 50px;
+    text-indent: 10px;
+    font-size: 1.2rem !important;
+    color: rgb(0, 20, 60);
+    transition: .3s ease-in-out !important;
+}
+input::placeholder {
+    font-style: italic;
+}
+input:focus {
+    text-indent: 15px !important;
+}
+form button {
+    min-width: 150px;
+    height: 50px;
+    font-size: 1.2rem !important;
+    border-color: white !important;
+    color: white !important;
+}
+form button:hover {
+    background-color: white !important;
+    border-color: rgb(0, 20, 60) !important;
+    color: rgb(0, 20, 60) !important;
+    font-weight: bold !important;
 }
