--- a/template/static-files/css/login.css
+++ b/template/static-files/css/login.css
@@ -2,7 +2,7 @@ body, html {
     height: 100vh;
 }
 .cover {
-    background-image: url('../img/bg/login.jpg');
+    background-image: url('../img/bg/index.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -11,6 +11,18 @@ body, html {
 .tint {
     background-color: rgba(0,10,80,.8);
     height: 100%;
+    padding: 10% 0 0 0;
+}
+.login-area {
+    width: 400px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px .5px rgba(0,0,0,.4);
+}
+.logo-div img {
+    width: 40%;
+}
+.form-container {
+    border-top: 1px solid white;
 }
 input {
     height: 50px;
@@ -37,4 +49,36 @@ form button:hover {
     border-color: rgb(0, 20, 60) !important;
     color: rgb(0, 20, 60) !important;
     font-weight: bold !important;
+}
+
+@media screen and (max-width: 768px) {
+    .tint {
+        padding: 12% 0 0 0;
+    }
+}
+@media screen and (max-width: 600px) {
+    .tint {
+        padding: 14% 0 0 0;
+    }
+    input, form button {
+        height: 40px;
+    }
+}
+@media screen and (max-width: 500px) {
+    .tint {
+        padding: 16% 0 0 0;
+    }
+    .login-area {
+        width: 90%;
+    }
+}
+@media screen and (max-width: 400px) {
+    .tint {
+        padding: 18% 0 0 0;
+    }
+}
+@media screen and (max-width: 370px) {
+    .tint {
+        padding: 20% 0 0 0;
+    }
 }
