--- a/template/login.html
+++ b/template/login.html
@@ -15,7 +15,9 @@
             <div class="tint">
                 <div class="login-area mx-auto">
                     <div class="logo-div text-center py-4">
-                        <img class="img-fluid" src="static-files/img/logo/logo.png" alt="logo">
+                        <a href="index.html">
+                            <img class="img-fluid" src="static-files/img/logo/logo.png" alt="logo">
+                        </a>
                     </div>
                     <div class="form-container p-4">
                         <form class="form-group" method="POST">
