--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,7 @@
                         <div class="navbar-nav ml-auto">
                             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link" href="#">Businesses</a>
-                            <a class="nav-item nav-link" href="#">Login</a>
+                            <a class="nav-item nav-link" href="login.html">Login</a>
                             <a class="nav-item nav-link" href="#">Sign Up</a>
                         </div>
                     </div>
