Add sign up page css

--- a/template/signup.html
+++ b/template/signup.html
@@ -9,7 +9,7 @@
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static-files/css/normalize.css">
         <link rel="stylesheet" href="static-files/css/master.css">
-        <link rel="stylesheet" href="static-files/css/index.css">
+        <link rel="stylesheet" href="static-files/css/signup.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-light">
@@ -21,10 +21,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="#">Home</a>
                     <a class="nav-item nav-link" href="#">Businesses</a>
                     <a class="nav-item nav-link" href="login.html">Login</a>
-                    <a class="nav-item nav-link" href="#">Sign Up</a>
+                    <a class="nav-item nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
                 </div>
             </div>
         </nav>
