--- a/template/signup.html
+++ b/template/signup.html
@@ -12,22 +12,64 @@
         <link rel="stylesheet" href="static-files/css/signup.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-light">
-            <a class="navbar-brand" href="#">
-                <img class="img-fluid" src="static-files/img/logo/logo.png" alt="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fa fa-navicon"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link active" href="#">Home</a>
-                    <a class="nav-item nav-link" href="#">Businesses</a>
-                    <a class="nav-item nav-link" href="login.html">Login</a>
-                    <a class="nav-item nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
+        <div class="nav-div fixed-top">
+            <nav class="navbar navbar-expand-md navbar-light my-nav-bg">
+                <a class="navbar-brand" href="#">
+                    <img class="img-fluid" src="static-files/img/logo/blogo.png" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-navicon"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link active" href="#">Home</a>
+                        <a class="nav-item nav-link" href="#">Businesses</a>
+                        <a class="nav-item nav-link" href="login.html">Login</a>
+                        <a class="nav-item nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
+                    </div>
                 </div>
+            </nav>
+        </div>
+        <div class="container main-content">
+            <div class="description text-center">
+                <p>Already have an account? <a href="login.html"><strong>Log in</strong></a> instead.</p>
             </div>
-        </nav>
+            <form class="m-5 p-4" method="POST">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="firstname">First Name</label>
+                        <input type="text" class="form-control" id="firstname" placeholder="e.g John">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="lastname">Last Name</label>
+                        <input type="text" class="form-control" id="lastname" placeholder="e.g Doe">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="email">Email Address</label>
+                        <input type="email" class="form-control" id="email" placeholder="e.g something@example.com">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" placeholder="e.g johndoe123">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="At least 6 characters" min="6">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="repassword">Retype password</label>
+                        <input type="password" class="form-control" id="repassword" placeholder="Please enter password again">
+                    </div>
+                </div>
+                <div class="mt-3 px-0 text-center">
+                    <button class="btn btn-outline-success" type="submit">Sign Up</button>
+                </div>
+            </form>
+        </div>
         <footer>
             <div class="container py-4">
                 <div class="row">
