--- a/template/static-files/css/index.css
+++ b/template/static-files/css/index.css
@@ -9,6 +9,9 @@
     background-color: rgba(0,10,80,.4);
     height: 100%;
 }
+.fa {
+    color: white;
+}
 .search-area {
     background-color: rgba(210,210,240,.3);
     margin: 10% 5% 5% 5%;
@@ -20,6 +23,14 @@
     background-color: rgba(0, 0, 60, .9);
     border-radius: 10px 10px 0 0;
     box-shadow: 1px 1px 10px .5px rgba(0,0,0,.4);
+}
+form button {
+    border-color: white !important;
+    color: white !important;
+}
+form button:hover {
+    background-color: white !important;
+    color: rgb(0, 20, 60) !important;
 }
 .search-result-container {
     background-color: rgba(0,0,40,.8);
