--- a/template/login.html
+++ b/template/login.html
@@ -30,8 +30,15 @@
                             </div>
                         </form>
                     </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <p><a href="#">Forgot password?</a></p>
+                        </div>
+                        <div class="col-6">
+                            <p><a href="#">No Account? <a href="#">Create</a> one</a></p>
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
