--- a/template/login.html
+++ b/template/login.html
@@ -35,7 +35,7 @@
                             <p><a href="#">Forgot password?</a></p>
                         </div>
                         <div class="col-6">
-                            <p><a href="#">No Account? <a href="#">Create</a> one</a></p>
+                            <p><a href="#">Don't have an account? Please <a href="#">Sign up</a> instead</a></p>
                         </div>
                     </div>
                 </div>
