--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,7 @@
                             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link" href="#">Businesses</a>
                             <a class="nav-item nav-link" href="login.html">Login</a>
-                            <a class="nav-item nav-link" href="#">Sign Up</a>
+                            <a class="nav-item nav-link" href="signup.html">Sign Up</a>
                         </div>
                     </div>
                 </nav>
