--- a/template/signup.html
+++ b/template/signup.html
@@ -25,7 +25,7 @@
                         <a class="nav-item nav-link active" href="#">Home</a>
                         <a class="nav-item nav-link" href="#">Businesses</a>
                         <a class="nav-item nav-link" href="login.html">Login</a>
-                        <a class="nav-item nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="signup.html">Sign Up <span class="sr-only">(current)</span></a>
                     </div>
                 </div>
             </nav>
