--- a/template/index.html
+++ b/template/index.html
@@ -16,14 +16,14 @@
             <div class="tint">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="img-fluid" src="static-files/img/logo/logo.png" alt="logo">
+                        <img class="img-fluid" src="static-files/img/logo/wlogo.png" alt="logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fa fa-navicon"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav ml-auto">
-                            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link" href="#">Businesses</a>
                             <a class="nav-item nav-link" href="login.html">Login</a>
                             <a class="nav-item nav-link" href="signup.html">Sign Up</a>
