--- a/template/signup.html
+++ b/template/signup.html
@@ -22,7 +22,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" href="#">Home</a>
+                        <a class="nav-item nav-link active" href="index.html">Home</a>
                         <a class="nav-item nav-link" href="#">Businesses</a>
                         <a class="nav-item nav-link" href="login.html">Login</a>
                         <a class="nav-item nav-link" href="signup.html">Sign Up <span class="sr-only">(current)</span></a>
