--- a/template/login.html
+++ b/template/login.html
@@ -23,19 +23,19 @@
                         <form class="form-group" method="POST">
                             <label for="email">Email Address</label>
                             <input class="form-control" type="email" name="email" id="email" placeholder="Email address" aria-describedby="label">
-                            <label for="password">Password</label>
+                            <label class="mt-3" for="password">Password</label>
                             <input class="form-control" type="password" name="password" id="password" placeholder="Password" aria-describedby="label">
                             <div class="text-center mt-4">
                                 <button class="btn btn-outline-success" type="button" name="button">Login</button>
                             </div>
                         </form>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <p><a href="#">Forgot password?</a></p>
-                        </div>
-                        <div class="col-6">
-                            <p><a href="#">Don't have an account? Please <a href="signup.html">Sign up</a> instead</a></p>
+                        <div class="row text-center login-footer">
+                            <div class="col-6">
+                                <p><a href="#">Forgot password?</a></p>
+                            </div>
+                            <div class="col-6">
+                                <p><a href="signup.html">Sign up</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
