--- a/template/static-files/css/login.css
+++ b/template/static-files/css/login.css
@@ -28,6 +28,10 @@ body, html {
 .form-container {
     border-top: 1px solid white;
 }
+label {
+    color: white;
+    font-size: 1.2rem;
+}
 input {
     height: 50px;
     text-indent: 10px;
@@ -53,6 +57,9 @@ form button:hover {
     border-color: rgb(0, 20, 60) !important;
     color: rgb(0, 20, 60) !important;
     font-weight: bold !important;
+}
+.login-footer a {
+    color: white;
 }
 
 @media screen and (max-width: 600px) {
