--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@
         <div class="cover">
             <div class="tint">
                 <nav class="navbar navbar-expand-md navbar-light">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="index.html">
                         <img class="img-fluid" src="static-files/img/logo/wlogo.png" alt="logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
