--- a/template/signup.html
+++ b/template/signup.html
@@ -14,7 +14,7 @@
     <body>
         <div class="nav-div fixed-top">
             <nav class="navbar navbar-expand-md navbar-light my-nav-bg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img class="img-fluid" src="static-files/img/logo/blogo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
