--- a/template/static-files/css/signup.css
+++ b/template/static-files/css/signup.css
@@ -1,8 +1,13 @@
+body {
+    background-color: rgb(245,245,245);
+}
 .main-content {
     margin-top: 150px;
 }
 form {
-    box-shadow: 1px 1px 10px 0 rgba(0,0,0,.5);
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0.5px 1px 4px 0 rgba(0,0,0,.5);
 }
 form button {
     border-color: rgb(0, 20, 60) !important;
