--- a/template/login.html
+++ b/template/login.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static-files/css/normalize.css">
+        <link rel="stylesheet" href="static-files/css/master.css">
         <link rel="stylesheet" href="static-files/css/login.css">
     </head>
     <body>
@@ -20,7 +21,7 @@
                         </a>
                     </div>
                     <div class="form-container p-4">
-                        <form class="form-group" method="POST">
+                        <form class="form-group" action="UserProfile.html" method="POST">
                             <label for="email">Email Address</label>
                             <input class="form-control" type="email" name="email" id="email" placeholder="Email address" aria-describedby="label">
                             <label class="mt-3" for="password">Password</label>
@@ -31,7 +32,7 @@
                         </form>
                         <div class="row text-center login-footer">
                             <div class="col-6">
-                                <p><a href="#">Forgot password?</a></p>
+                                <p><a href="">Forgot password?</a></p>
                             </div>
                             <div class="col-6">
                                 <p><a href="signup.html">Sign up</a></p>
