Improve sign up form responsiveness

--- a/template/signup.html
+++ b/template/signup.html
@@ -34,7 +34,7 @@
             <div class="description text-center">
                 <p>Already have an account? <a href="login.html"><strong>Log in</strong></a> instead.</p>
             </div>
-            <form class="m-5 p-4" method="POST">
+            <form class="my-5" method="POST">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="firstname">First Name</label>
