--- a/template/static-files/css/signup.css
+++ b/template/static-files/css/signup.css
@@ -4,7 +4,12 @@ body {
 .main-content {
     margin-top: 150px;
 }
-
+form {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0.5px 1px 4px 0 rgba(0,0,0,.5);
+    padding: 3rem;
+}
 @media screen and (max-width: 768px) {
 
 }
@@ -12,7 +17,9 @@ body {
 
 }
 @media screen and (max-width: 510px) {
-
+    form {
+        padding: 3rem 1rem;
+    }
 }
 @media screen and (max-width: 302px) {
     .main-content {
