--- a/template/signup.html
+++ b/template/signup.html
@@ -24,7 +24,7 @@
                     <div class="navbar-nav ml-auto">
                         <a class="nav-item nav-link active" href="index.html">Home</a>
                         <a class="nav-item nav-link" href="#">Businesses</a>
-                        <a class="nav-item nav-link" href="login.html">Login</a>
+                        <a class="nav-item nav-link" href="UserProfile.html">Login</a>
                         <a class="nav-item nav-link" href="signup.html">Sign Up <span class="sr-only">(current)</span></a>
                     </div>
                 </div>
