Improve table responsiveness

--- a/template/UserProfile.html
+++ b/template/UserProfile.html
@@ -32,7 +32,7 @@
                 </div>
             </nav>
             <div class="user-nav text-right">
-                <div class="user-navbar mr-4">
+                <div class="user-navbar">
                     <a class="user-item pr-3" href="#"><i class="fa fa-bell"></i></a>
                     <a class="user-item pr-3" href="#"><i class="fa fa-envelope"></i></a>
                     <li class="user-item dropdown">
@@ -54,7 +54,7 @@
         <div class="container mt-20 mb-5">
             <div class="dashboard">
                 <div class="row">
-                    <div class="col-md-5 px-4">
+                    <div class="col-md-5">
                         <div class="user-profile">
                             <div class="profile-avatar">
                                 <img class="img-fluid" src="static-files/img/content/avatar/avatar.jpg" alt="John">
