Restructure CSS stylesheet

--- a/template/UserProfile.html
+++ b/template/UserProfile.html
@@ -56,8 +56,8 @@
                 <div class="row">
                     <div class="col-md-5">
                         <div class="user-profile">
-                            <div class="profile-avatar">
-                                <img class="img-fluid" src="static-files/img/content/avatar/avatar.jpg" alt="John">
+                            <div class="profile-avatar div-thumbnail">
+                                <img class="img-fluid img-thumbnail" src="static-files/img/content/avatar/avatar.jpg" alt="John">
                             </div>
                             <div class="user-data">
                                 <table class="table table-responsive-md">
