--- a/template/signup.html
+++ b/template/signup.html
@@ -9,6 +9,7 @@
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static-files/css/normalize.css">
         <link rel="stylesheet" href="static-files/css/master.css">
+        <link rel="stylesheet" href="static-files/css/submaster.css">
         <link rel="stylesheet" href="static-files/css/signup.css">
     </head>
     <body>
@@ -30,7 +31,7 @@
                 </div>
             </nav>
         </div>
-        <div class="container main-content">
+        <div class="container first-element-after-nav-margin-top">
             <div class="description text-center">
                 <p>Already have an account? <a href="login.html"><strong>Log in</strong></a> instead.</p>
             </div>
