--- a/template/static-files/css/user-profile.css
+++ b/template/static-files/css/user-profile.css
@@ -4,7 +4,7 @@ body {
 .user-profile {
     background-color: white;
     border-radius: 5px;
-    box-shadow: 0 0 8px 0 rgb(0,0,0,.7);
+    box-shadow: 0.5px 1px 4px 0 rgba(0,0,0,.5);
 }
 .profile-avatar {
     background-color: rgb(0,20,60);
@@ -19,5 +19,5 @@ body {
 .my-businesses {
     background-color: white;
     border-radius: 5px;
-    box-shadow: 0 0 5px -1px rgb(0,0,0,.7);
+    box-shadow: 0.5px 1px 4px 0 rgba(0,0,0,.5);
 }
