--- a/template/UserProfile.html
+++ b/template/UserProfile.html
@@ -97,7 +97,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td class="text-left"><a href="#">ES-Glamore International</a></td>
+                                        <td class="text-left"><a href="BusinessProfilePage.html">ES-Glamore International</a></td>
                                         <td>29</td>
                                         <td>4.2</td>
                                     </tr>
